<resources>
    <string name="app_name">Tp_Mobile 6</string>
    <string name="title">Popular Movies</string>
    <string name="item_id">ID: %1$s</string>
    <string name="item_title">TITLE: %1$s</string>
    <string name="item_date">DATE: %1$s</string>
    <string name="item_image">https://image.tmdb.org/t/p/original%1$s</string>
    <string name="image_content_description">Content description</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="title_tp6">TP Mobile 6</string>
    <string name="button_show_movies">Show movies</string>
    <string name="button_back">Back to main</string>
    <string name="failure">Error, try again.</string>
    <string name="error_dialog">Error database.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_dialog">Error</string>
    <string name="description_dialog">An error occurred in database</string>
    <string name="button_dialog">OK</string>
    <string name="test_error_dialog">Test error dialog</string>
</resources>